--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <a href="#005">垃圾清運</a>｜
 <a href="#006">關懷包發放</a>｜
 <a href="#007">寵物安置</a>｜
-<a href="https://docs.google.com/document/d/1uOatJn78puIjXhbbgOYuFYFtNNmMcD_DPo3ThoN-s0Y/edit" target="_blank">信義區防疫Q&A 超推</a>｜
+<a href="#" target="_blank">信義區防疫Q&A 超推</a>｜
 <!--<a href="https://www.gov.taipei/covid19/" target="_blank">台北市政府</a>｜ -->
 </h2>
 </nav>
@@ -77,9 +77,9 @@
 <ul>
 <h3>【起手招式】<a href="https://covidtest.cdc.gov.tw/#/" target="_blank">民眾COVID-19查詢網站-連結</a></h3>
 
-<h3>【居隔名單】<a href="https://drive.google.com/drive/folders/1d2OC2Q66qKYp6ZZuEjKFIidqMAKzOA3t" target="_blank">信義區居隔者名單《雲端硬碟內點選》</a></h3>
+<h3>【居隔名單】<a href="#" target="_blank">信義區居隔者名單《雲端硬碟內點選》</a></h3>
 
-<h3>【強隔補開】<a href="https://docs.google.com/spreadsheets/d/19sOIwi87_LVUFuUNXjiJrcJtuGoyWnFO/edit#gid=1696024579" target="_blank">強隔書簡訊補發-連結</a></h3>
+<h3>【強隔補開】<a href="#" target="_blank">強隔書簡訊補發-連結</a></h3>
 
 <h3>【數位證明】<a href="https://dvc.mohw.gov.tw/vapa/apply/Index.init.ctr?openExternalBrowser=1" target="_blank">數位新冠病毒健康證明-連結</a></h3>
 
@@ -102,7 +102,7 @@
 
 <h3>【藥物需求】<a href="http://www.tpa.org.tw/post01.jsp?msid=MS00023327&type=A" target="_blank">臺北市提供居家隔離、居家檢疫者送藥到宅服務藥局名單（藥師公會）</a></h3>
 
-<h3>【視訊看診】<a href="https://docs.google.com/document/d/1MI96LtJ43am1t9ziAdKNfkHnaKLeHwkt-5kec7A5Qk4/edit" target="_blank">臺北市確診判定診所名單(信義區)</a></h3>
+<h3>【視訊看診】<a href="#" target="_blank">臺北市確診判定診所名單(信義區)</a></h3>
 
 <h3>【友軍電話】<a href="html/phoneNo.html" target="_self" id="1">相關單位聯絡電話</a></h3>
 
